--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
             android:theme="@style/NoActionBar" />
         <activity
             android:name=".Activities.MobileNumberActivity"
+            android:theme="@style/NoActionBar"></activity>
+        <activity
+            android:name=".Activities.ChooseActivity"
             android:theme="@style/NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,9 +30,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".Activities.ChooseActivity"
-            android:theme="@style/NoActionBar" />
         <activity
             android:name=".Activities.OwnerDetailsActivity"
             android:theme="@style/NoActionBar" />
