--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.android.support:multidex:1.0.3'
-
+    implementation 'com.github.medyo:android-about-page:1.2.5'
 }
 apply plugin: 'com.google.gms.google-services'
