--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,20 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/icon"
         android:label="@string/app_name"
         android:usesCleartextTraffic="true"
         android:requestLegacyExternalStorage="true"
         android:hardwareAccelerated="true"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/icon"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".Activities.FutureBookingActivity"
+            android:theme="@style/NoActionBar" />
+        <activity android:name=".Activities.PrivacyActivity"
+            android:theme="@style/NoActionBar" />
+
+        <activity android:name=".Activities.ContactActivity"
             android:theme="@style/NoActionBar" />
         <activity
             android:name=".Activities.ShowIncomeActivity"
